--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "expo": "~47.0.12",
     "expo-screen-orientation": "~5.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "react-native-webview": "11.23.1",
-    "react-native-youtube-iframe": "^2.2.2"
+    "react-native-youtube-iframe": "^2.2.2",
+    "expo-application": "~5.0.1",
+    "expo-auth-session": "~3.8.0",
+    "expo-web-browser": "~12.0.0",
+    "expo-random": "~13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
   },
   "private": true
